--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="main-text">SEATTLE VLOG COMING 10/21/25</h1>
+        <h1 class="main-text">SEATTLE VLOG COMING 10/21/25 (actually it may or may not be L.A.)</h1>
     </div>
     <script src="script.js"></script>
 </body>
