--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seattle Vlog - Coming Soon</title>
+    <title>Seattle Vlog - Coming Never</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="main-text">SEATTLE VLOG COMING 10/21/25 (actually it may or may not be L.A.)</h1>
+        <h1 class="main-text">SEATTLE VLOG COMING 10/20/26 (minor hiccup). If it's not here, it's because I'm in the airport. I promise to make it worth the wait. We have to go back. Ta</h1>
     </div>
     <script src="script.js"></script>
 </body>
