--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="main-text">SEATTLE VLOG COMING 10/20/26 (minor hiccup). If it's not here, it's because I'm in the airport. I promise to make it worth the wait. We have to go back. Ta</h1>
+        <h1 class="main-text">SEATTLE VLOG COMING 12/25/27 (minor hiccup) We are going back to Seattle. I promise to make it worth the wait. We have to go back. Take care of yourself. Love you.</h1>
     </div>
     <script src="script.js"></script>
 </body>
