--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="main-text">SEATTLE VLOG COMING 12/25/27 (minor hiccup) We are going back to Seattle. I promise to make it worth the wait. We have to go back. Take care of yourself. Love you.</h1>
+        <h1 class="main-text">San Diego vlog coming 2 months after 12/25/25 (minor hiccup) We are NOT going back to Seattle. I promise to make it worth the wait. We have to go back. Take care of yourself. Love you.</h1>
     </div>
     <script src="script.js"></script>
 </body>
